[package]
name = "ipfs-embed-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cid = "0.7"
libipld = { version = "0.12", default-features = false, features = ["dag-cbor", "dag-pb", "dag-json"] }

[dependencies.ipfs-embed]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_block"
path = "fuzz_targets/decode_block.rs"
test = false
doc = false
